--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -1,21 +1,26 @@
-.container{
-    width: 607px;
-height: 829px;
-margin:auto;
-margin-top: 50px;
-border-radius: 12px;
-background-image: linear-gradient(180deg, #130754 0%, #3b2f80 100%);
-
+.main {
+    background: linear-gradient(to bottom, #85B8E8, #BC80D5);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.top-bar{
+.container {
+    width: 607px;
+    height: 829px;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.top-bar {
     display: flex;
     justify-content: center;
     gap: 14px;
     padding-top: 60px;
 }
 
-.top-bar input{
+.top-bar input {
     display: flex;
     width: 362px;
     height: 78px;
@@ -29,7 +34,7 @@ background-image: linear-gradient(180deg, #130754 0%, #3b2f80 100%);
     font-weight: 400;
 }
 
-.search-icon{
+.search-icon {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,13 +45,13 @@ background-image: linear-gradient(180deg, #130754 0%, #3b2f80 100%);
     cursor: pointer;
 }
 
-.weather-image{
+.weather-image {
     margin-top: 29px;
     display: flex;
     justify-content: center;
 }
 
-.weather-temp{
+.weather-temp {
     display: flex;
     justify-content: center;
     color: white;
@@ -54,7 +59,7 @@ background-image: linear-gradient(180deg, #130754 0%, #3b2f80 100%);
     font-weight: 400;
 }
 
-.weather-location{
+.weather-location {
     display: flex;
     justify-content: center;
     color: white;
@@ -62,30 +67,30 @@ background-image: linear-gradient(180deg, #130754 0%, #3b2f80 100%);
     font-weight: 400;
 }
 
-.data-container{
+.data-container {
     margin-top: 50px;
     color: white;
     display: flex;
     justify-content: center;
 }
 
-.element{
+.element {
     margin: auto;
     display: flex;
     align-items: flex-start;
     gap: 12px;
 }
 
-.data{
+.data {
     font-size: 34px;
     font-weight: 400;
 }
 
-.text{
+.text {
     font-size: 20px;
     font-weight: 400;
 }
 
-.icon{
+.icon {
     margin-top: 10px;
 }
